feat: getFirst -> get(0) 으로 변경